fix: compile and run script